--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.2"
+    "react-icons": "^5.0.1",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.7.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
